# myros

./: Cargo.toml  Makefile  README.md  _config.yml  build.rs  grub.cfg  index.md  x86_64-unknown-none.json
.cargo/: config.toml
posts/: hello-world.md  long-mode.md  the-screen.md
src/: lib.rs  main.rs  vga.rs
src/arch_x86_64/: boot.asm
