[package]
name = "myros"
version = "0.1.0-dev"
authors = ["Mike Leany <55358344+mikeleany@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "myros"
test = false

[build-dependencies]
nasm-rs = "0.1.7"

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
